--- a/aufgabenservice-Service/aufgabenservice_service/pom.xml
+++ b/aufgabenservice-Service/aufgabenservice_service/pom.xml
@@ -21,6 +21,11 @@
 		<spring.cloud.version>1.0.3.RELEASE</spring.cloud.version>
 	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4</version>
+		</dependency>
 		<!-- Spring Boot -->
 		<dependency>
 		    <groupId>org.springframework.boot</groupId>
